--- a/style_violet_house.css
+++ b/style_violet_house.css
@@ -2,19 +2,25 @@
     width: 1000rem;
     height: 35rem;
     overflow: hidden;
-    margin: 10px;
     position: relative;
     margin: auto;
     min-height: 100%;
     min-width: 100%;
     
 }
-
+#img-cart{
+    max-height: 25rem;
+}
+#registro-cart{
+    max-height: 21rem;
+}
+#pago-cart{
+    max-height: 19rem;
+}
 .footer{
     width: 100%;
     height: 35rem;
     overflow: hidden;
-    margin: 10px;
     position: relative;
     margin: auto;
     min-height: 100%;
