cambios en nav y pagina de productos e index

--- a/style_violet_house.css
+++ b/style_violet_house.css
@@ -54,3 +54,12 @@
 .fondodes{
     background-color: #ccecef;
 }
+ .verpro{
+     text-decoration: none;
+     color: white;
+ }
+
+ .verpro:hover{
+    text-decoration: none;
+    color: white;
+}
