--- a/style_violet_house.css
+++ b/style_violet_house.css
@@ -9,14 +9,37 @@
     min-width: 100%;
     
 }
+
+.table{
+    opacity: 70%;
+}
+
 #img-cart{
-    max-height: 25rem;
+    max-height: 28rem;
+}
+
+#img-cart img{
+    overflow: scroll ;
+    padding-top: 12rem;
+    padding-left:25rem;
+    padding-bottom: 12rem;
+
+}
+.text_cart{
+    color:black;
 }
 #registro-cart{
-    max-height: 21rem;
+    max-height: 28rem;
 }
-#pago-cart{
-    max-height: 19rem;
+
+#registro-cart img{
+    max-height: 28rem;
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    min-height: 100%;
+    min-width: 100%;
+    padding: 0 20 0 20;
 }
 .footer{
     width: 100%;
@@ -28,6 +51,13 @@
     min-width: 100%;
     border-radius: none;
 
+}
+
+#pago-cart{
+    max-height: 25rem;
+}
+#pago-cart img{
+    padding-bottom: 12rem;
 }
 
 .footer img{
